# ndix

./: README.md  pyproject.toml
ndix/: __init__.py
ndix/src/: dict.py
