[tool.poetry]
name = "ndix"
version = "0.1.1"
description = ""
authors = ["michael <michael.d.moor@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/mi92/ndix"
authors = ["Michael Moor"]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
